fix: flex wrap

--- a/DictionaryWebApp/src/app/components/result/result-meaning/result-meaning.component.scss
+++ b/DictionaryWebApp/src/app/components/result/result-meaning/result-meaning.component.scss
@@ -4,6 +4,7 @@
   .meaning-container {
     .synonims {
       display: flex;
+      flex-wrap: wrap;
       gap: 1rem;
       padding-bottom: 1.5rem;
 
